prod_snapshot_2015-09-24_1030/objects/SLA_By_Product_Type_v2__c.object
<CustomObject>
    <fields>
        <fullName>Awaiting_Client_Approval_BH__c</fullName>
        <label>Awaiting Client Approval BH</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Awaiting_Client_Approval__c</fullName>
        <formula>Awaiting_Client_Approval_BH__c / 8</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Awaiting Client Approval</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Awaiting_Client_Asset_BH__c</fullName>
        <label>Awaiting Client Asset BH</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Awaiting_Client_Asset__c</fullName>
        <formula>Awaiting_Client_Asset_BH__c / 8</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Awaiting Client Asset</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Awaiting_Client_Onboard_BH__c</fullName>
        <label>Awaiting Client Onboard BH</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Awaiting_Client_Onboard__c</fullName>
        <formula>Awaiting_Client_Onboard_BH__c / 8</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Awaiting Client Onboard</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_Won_To_Assigned_BH__c</fullName>
        <label>Closed Won To Assigned BH</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_Won_To_Assigned__c</fullName>
        <formula>Closed_Won_To_Assigned_BH__c / 8</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed Won To Assigned</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_To_Live_BH__c</fullName>
        <formula>(Awaiting_Client_Approval_BH__c + 
Awaiting_Client_Asset_BH__c + 
Awaiting_Client_Onboard_BH__c + 
Closed_Won_To_Assigned_BH__c + 
In_Fulfillment_BH__c)/8</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days To Live BH</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_To_Live__c</fullName>
        <formula>ROUND(Days_To_Live_BH__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days To Live</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>In_Fulfillment_BH__c</fullName>
        <label>In Fulfillment BH</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>In_Fulfillment__c</fullName>
        <formula>In_Fulfillment_BH__c / 8</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>In Fulfillment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Period_Live_Date__c</fullName>
        <label>Period Live Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Product_SLA_Dec__c</fullName>
        <label>Product SLA Dec</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_SLA__c</fullName>
        <formula>ROUND(Product_SLA_Dec__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product SLA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Products_Live__c</fullName>
        <label>Products Live</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Report_Sort__c</fullName>
        <formula>CASE( Product_Type__c ,&quot;PPC&quot;,1,&quot;SEO&quot;,2,&quot;Social&quot;,3,&quot;Maps&quot;,4,&quot;Email&quot;,5,&quot;Template Website&quot;,6,&quot;Custom Website&quot;,7,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report Sort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>SLA By Product Type v2</label>
    <listViews>
        <fullName>By_Product_Type</fullName>
        <columns>Period_Live_Date__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Products_Live__c</columns>
        <columns>NAME</columns>
        <columns>Product_SLA__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Product_SLA_Dec__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>6/30/2014 12:00 AM</value>
        </filters>
        <filters>
            <field>Product_Type__c</field>
            <operation>equals</operation>
            <value>Custom Website</value>
        </filters>
        <label>By Product Type</label>
    </listViews>
    <nameField>
        <label>SLA By Product Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SLAs By Product Type v2</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>